--- a/working_elements/Draft/references.bib
+++ b/working_elements/Draft/references.bib
@@ -8,3 +8,143 @@
  urldate = {2025-05-13},
  year = {2010}
 }
+
+@Article{Lifetime_income,
+  author={Christopher Tamborini and ChangHwan Kim and Arthur Sakamoto},
+  title={{Education and Lifetime Earnings in the United States}},
+  journal={Demography},
+  year=2015,
+  volume={52},
+  number={4},
+  pages={1383-1407},
+  month={August},
+  keywords={Lifetime earnings; Survey of Income and Program Participation; Economic returns to college; Semi-syn},
+  doi={10.1007/s13524-015-0407-0},
+  abstract={Differences in lifetime earnings by educational attainment have been of great research and policy interest. Although a large literature examines earnings differences by educational attainment, research on lifetime earnings—which refers to total accumulated earnings from entry into the labor market until retirement—remains limited because of the paucity of adequate data. Using data that match respondents in the Survey of Income and Program Participation to their longitudinal tax earnings as recorded by the Social Security Administration, we estimate the 50-year work career effects of education on lifetime earnings for men and women. By overcoming the purely synthetic cohort approach, our results provide a more realistic appraisal of actual patterns of lifetime earnings. Detailed estimates are provided for gross lifetime earnings by education; net lifetime earnings after controlling for covariates associated with the probability of obtaining a bachelor’s degree; and the net present 50-year lifetime value of education at age 20. In addition, we provide estimates that include individuals with zero earnings and disability. We also assess the adequacy of the purely synthetic cohort approach, which uses age differences in earnings observed in cross-sectional surveys to approximate lifetime earnings. Overall, our results confirm the persistent positive effects of higher education on earnings over different stages of the work career and over a lifetime, but also reveal notably smaller net effects on lifetime earnings compared with previously reported estimates. We discuss the implications of these and other findings. Copyright Population Association of America 2015},
+  url={https://ideas.repec.org/a/spr/demogr/v52y2015i4p1383-1407.html}
+}
+
+@article{DeNardi2023,
+  title={The lifetime costs of bad health},
+  author={De Nardi, Mariacristina and Pashchenko, Svetlana and Porapakkarm, Ponpoje},
+  journal={Review of Economic Studies},
+  volume={92},
+  number={3},
+  pages={1987--2026},
+  year={2025},
+  publisher={Oxford University Press UK}
+}
+
+@article{Capatina_2015,
+  title={Life-cycle effects of health risk},
+  author={Capatina, Elena},
+  journal={Journal of Monetary Economics},
+  volume={74},
+  pages={67--88},
+  year={2015},
+  publisher={Elsevier}
+}
+
+@Article{Burke_et_al_2015,
+  author={Marshall Burke and Solomon M. Hsiang and Edward Miguel},
+  title={{Global non-linear effect of temperature on economic production}},
+  journal={Nature},
+  year=2015,
+  volume={527},
+  number={7577},
+  pages={235-239},
+  month={November},
+  keywords={},
+  doi={10.1038/nature15725},
+  abstract={Economic productivity is shown to peak at an annual average temperature of 13 °C and decline at high temperatures, indicating that climate change is expected to lower global incomes more than 20\% by 2100.},
+  url={https://ideas.repec.org/a/nat/nature/v527y2015i7577d10.1038_nature15725.html}
+}
+
+@TechReport{Bilal_Kanzig_2024,
+  author={Adrien Bilal and Diego R. Känzig},
+  title={{The Macroeconomic Impact of Climate Change: Global vs. Local Temperature}},
+  year=2024,
+  month=May,
+  institution={National Bureau of Economic Research, Inc},
+  type={NBER Working Papers},
+  url={https://ideas.repec.org/p/nbr/nberwo/32450.html},
+  number={32450},
+  abstract={This paper estimates that the macroeconomic damages from climate change are six times larger than previously thought. Exploiting natural global temperature variability, we find that 1°C warming reduces world GDP by 12\%. Global temperature correlates strongly with extreme climatic events, unlike country-level temperature used in previous work, explaining our larger estimate. We use this evidence to estimate damage functions in a neoclassical growth model. Business-as-usual warming implies a 25\% present welfare loss and a Social Cost of Carbon of $1,367 per ton. These impacts suggest that unilateral decarbonization policy is cost-effective for large countries such as the United States.},
+  keywords={},
+  doi={},
+}
+
+@article{
+doi:10.1126/science.1235367,
+author = {Solomon M. Hsiang  and Marshall Burke  and Edward Miguel },
+title = {Quantifying the Influence of Climate on Human Conflict},
+journal = {Science},
+volume = {341},
+number = {6151},
+pages = {1235367},
+year = {2013},
+doi = {10.1126/science.1235367},
+URL = {https://www.science.org/doi/abs/10.1126/science.1235367},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.1235367},
+abstract = {Knowledge silos can hinder attempts to explore questions of interest across many disciplines. Hsiang et al. (p. 1235367, published online 1 August) provide a meta-analysis of data from disciplines as disparate as archaeology and psychology to examine the relation between climate and conflict. Overall, warmer temperatures or extremes of rainfall can be causally associated with changes in interpersonal violence and in civil war. Across disciplinary boundaries, recently published evidence links climate change to increased violent conflict. A rapidly growing body of research examines whether human conflict can be affected by climatic changes. Drawing from archaeology, criminology, economics, geography, history, political science, and psychology, we assemble and analyze the 60 most rigorous quantitative studies and document, for the first time, a striking convergence of results. We find strong causal evidence linking climatic events to human conflict across a range of spatial and temporal scales and across all major regions of the world. The magnitude of climate’s influence is substantial: for each one standard deviation (1σ) change in climate toward warmer temperatures or more extreme rainfall, median estimates indicate that the frequency of interpersonal violence rises 4\% and the frequency of intergroup conflict rises 14\%. Because locations throughout the inhabited world are expected to warm 2σ to 4σ by 2050, amplified rates of human conflict could represent a large and critical impact of anthropogenic climate change.}}
+
+
+@article{Carleton_et_al_2022,
+    author = {Carleton, Tamma and Jina, Amir and Delgado, Michael and Greenstone, Michael and Houser, Trevor and Hsiang, Solomon and Hultgren, Andrew and Kopp, Robert E and McCusker, Kelly E and Nath, Ishan and Rising, James and Rode, Ashwin and Seo, Hee Kwon and Viaene, Arvid and Yuan, Jiacan and Zhang, Alice Tianbo},
+    title = {Valuing the Global Mortality Consequences of Climate Change Accounting for Adaptation Costs and Benefits*},
+    journal = {The Quarterly Journal of Economics},
+    volume = {137},
+    number = {4},
+    pages = {2037-2105},
+    year = {2022},
+    month = {04},
+    abstract = {Using 40 countries’ subnational data, we estimate age-specific mortality-temperature relationships and extrapolate them to countries without data today and into a future with climate change. We uncover a U-shaped relationship where extre6me cold and hot temperatures increase mortality rates, especially for the elderly. Critically, this relationship is flattened by higher incomes and adaptation to local climate. Using a revealed-preference approach to recover unobserved adaptation costs, we estimate that the mean global increase in mortality risk due to climate change, accounting for adaptation benefits and costs, is valued at roughly 3.2\% of global GDP in 2100 under a high-emissions scenario. Notably, today’s cold locations are projected to benefit, while today’s poor and hot locations have large projected damages. Finally, our central estimates indicate that the release of an additional ton of CO2 today will cause mortality-related damages of \$36.6 under a high-emissions scenario, with an interquartile range accounting for both econometric and climate uncertainty of [−\$7.8, \$73.0]. These empirically grounded estimates exceed the previous literature’s estimates by an order of magnitude.},
+    issn = {0033-5533},
+    doi = {10.1093/qje/qjac020},
+    url = {https://doi.org/10.1093/qje/qjac020},
+    eprint = {https://academic.oup.com/qje/article-pdf/137/4/2037/51054116/qjac020.pdf},
+}
+
+@TechReport{Deryugina_Hsiang_2017,
+  author={Tatyana Deryugina and Solomon Hsiang},
+  title={{The Marginal Product of Climate}},
+  year=2017,
+  month=Nov,
+  institution={National Bureau of Economic Research, Inc},
+  type={NBER Working Papers},
+  url={https://ideas.repec.org/p/nbr/nberwo/24072.html},
+  number={24072},
+  abstract={We develop an empirical approach to value changes to a climate in terms of total market output given optimal factor allocations in general equilibrium. Our approach accounts for unobservable heterogeneity across locations as well as the costs and benefits of adaptation in climates of arbitrary dimension. Importantly, we demonstrate that the Envelope Theorem implies the marginal product of a long-run climate can be exactly identified using only idiosyncratic weather variation. We apply this method to the temperature climate of the modern United States and find that, despite evidence that populations adapt, the marginal product of temperature has remained unchanged during 1970-2010, with high temperatures having low net value. Integrating marginal products recovers a value function for temperature, describing the causal effect of non-marginal climate changes net of adaptive re-optimization. We use this value function to consider the influence of temperature in the current cross-section and a future climate change scenario.},
+  keywords={},
+  doi={},
+}
+
+@Article{Hsiang_2016,
+  author={Solomon Hsiang},
+  title={{Climate Econometrics}},
+  journal={Annual Review of Resource Economics},
+  year=2016,
+  volume={8},
+  number={1},
+  pages={43-75},
+  month={October},
+  keywords={climate change; weather; disasters; causal inference},
+  doi={},
+  abstract={Identifying the effect of climate on societies is central to understanding historical economic development, designing modern policies that react to climatic events, and managing future global climate change. Here, I review, synthesize, and interpret recent advances in methods used to measure effects of climate on social and economic outcomes. Because weather variation plays a large role in recent progress, I formalize the relationship between climate and weather from an econometric perspective and discuss the use of these two factors as identifying variation, highlighting trade-offs between key assumptions in different research designs and deriving conditions when weather variation exactly identifies the effects of climate. I then describe recent advances, such as the parameterization of climate variables from a social perspective, use of nonlinear models with spatial and temporal displacement, characterization of uncertainty, measurement of adaptation, cross-study comparison, and use of empirical estimates to project the impact of future climate change. I conclude by discussing remaining methodological challenges.},
+  url={https://ideas.repec.org/a/anr/reseco/v8y2016p43-75.html}
+}
+
+@Article{Nordhaus_2019,
+  author={William Nordhaus},
+  title={{Climate Change: The Ultimate Challenge for Economics}},
+  journal={American Economic Review},
+  year=2019,
+  volume={109},
+  number={6},
+  pages={1991-2014},
+  month={June},
+  keywords={},
+  doi={},
+  abstract={William D. Nordhaus delivered his Prize Lecture on 8 December 2018 at the Aula Magna, Stockholm University.<br><small>(This abstract was borrowed from another version of this item.)</small>},
+  url={https://ideas.repec.org/a/aea/aecrev/v109y2019i6p1991-2014.html}
+}
