correcting typoes thanks

--- a/working_elements/Draft/main.tex
+++ b/working_elements/Draft/main.tex
@@ -49,14 +49,14 @@
     \footnote{
     % Despite all hardships, this work is done at last.
     I thank Jeanne Commault for her peerless guidance, without which I would not have been able to do a fraction of the present work. 
-    I thank Paul Bouscasse for his literature advices and hints that brought me to my final subject.
+    I thank Paul Bouscasse for his valuable advice and hints that led me to my final subject.
     I thank Moshe Buchinsky for his help and for enduring the incredible number of erroneous econometric specifications I showed him.
-    I thank Nathanaël and Jean for interesting (but often cryptic) collective monologs about our different thesis.
+    I thank Nathanaël and Jean for interesting (but often cryptic) collective monologues about our different thesis.
     I thank my fateful admission error.
-    I thank the Julia Lang and its community (and Pluto.jl) for the fun I had programming.
+    I thank the Julia Language and its community (and Pluto.jl) for the fun I had programming.
     I thank the French Republic for everything it gave me.
-    I thank my past self for holding on, and chosing this Master, where I learnt so much.
-    I thank my parents for having traveled so far, and sacrified so much.
+    I thank my past self for holding on, and choosing this Master, where I learnt so much.
+    I thank my parents for having traveled so far, and sacrificed so much.
     Despite all this help, I probably managed to forget some remaining errors...
     Dear readers, please forgive me.}
 \end{abstract}
